; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_pci_32.c_sys_pciconfig_iobase.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_pci_32.c_sys_pciconfig_iobase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_controller = type { i64, i64, i64 }

@EOPNOTSUPP = common dso_local global i64 0, align 8
@ENODEV = common dso_local global i64 0, align 8
@isa_io_base = common dso_local global i64 0, align 8
@isa_mem_base = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sys_pciconfig_iobase(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.pci_controller*, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64, i64* @EOPNOTSUPP, align 8
  %11 = sub nsw i64 0, %10
  store i64 %11, i64* %9, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call %struct.pci_controller* @pci_bus_to_hose(i64 %12)
  store %struct.pci_controller* %13, %struct.pci_controller** %8, align 8
  %14 = load %struct.pci_controller*, %struct.pci_controller** %8, align 8
  %15 = icmp ne %struct.pci_controller* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = load i64, i64* @ENODEV, align 8
  %18 = sub nsw i64 0, %17
  store i64 %18, i64* %4, align 8
  br label %39

19:                                               ; preds = %3
  %20 = load i64, i64* %5, align 8
  switch i64 %20, label %37 [
    i64 132, label %21
    i64 128, label %25
    i64 131, label %29
    i64 130, label %33
    i64 129, label %35
  ]

21:                                               ; preds = %19
  %22 = load %struct.pci_controller*, %struct.pci_controller** %8, align 8
  %23 = getelementptr inbounds %struct.pci_controller, %struct.pci_controller* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  store i64 %24, i64* %4, align 8
  br label %39

25:                                               ; preds = %19
  %26 = load %struct.pci_controller*, %struct.pci_controller** %8, align 8
  %27 = getelementptr inbounds %struct.pci_controller, %struct.pci_controller* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  store i64 %28, i64* %4, align 8
  br label %39

29:                                               ; preds = %19
  %30 = load %struct.pci_controller*, %struct.pci_controller** %8, align 8
  %31 = getelementptr inbounds %struct.pci_controller, %struct.pci_controller* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  store i64 %32, i64* %4, align 8
  br label %39

33:                                               ; preds = %19
  %34 = load i64, i64* @isa_io_base, align 8
  store i64 %34, i64* %4, align 8
  br label %39

35:                                               ; preds = %19
  %36 = load i64, i64* @isa_mem_base, align 8
  store i64 %36, i64* %4, align 8
  br label %39

37:                                               ; preds = %19
  %38 = load i64, i64* %9, align 8
  store i64 %38, i64* %4, align 8
  br label %39

39:                                               ; preds = %37, %35, %33, %29, %25, %21, %16
  %40 = load i64, i64* %4, align 8
  ret i64 %40
}

declare dso_local %struct.pci_controller* @pci_bus_to_hose(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
